fixed overlap if tableaux too big

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,6 +23,10 @@ h1 {
   visibility: hidden;
 }
 
+.no-overlap {
+  margin: 20px;
+}
+
 .custom-btn {
   margin: auto;
   padding: 10px;
